objects/ASI_CRM_No_of_Active_Contracts__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>No. of Active Contracts</relationshipLabel>
        <relationshipName>No_of_Active_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>No. of Active Contracts</relationshipLabel>
        <relationshipName>No_of_Active_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year_End_Date__c</fullName>
        <formula>DATE(VALUE(LEFT(RIGHT(ASI_CRM_Fiscal_Year__c, 4), 2))+2001,6,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year_Start_Date__c</fullName>
        <formula>DATE(VALUE(LEFT(RIGHT(ASI_CRM_Fiscal_Year__c, 4), 2))+2000,7,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Active_Contracts_YTD__c</fullName>
        <label>No. of Active Contracts (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Active_Contracts__c</fullName>
        <label>No. of Active Contracts (Full Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>No. of Active Contracts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TH_CRM_No_of_Active_Contracts</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_Snapshot_Date__c</columns>
        <columns>ASI_CRM_No_of_Active_Contracts__c</columns>
        <columns>ASI_CRM_No_of_Active_Contracts_YTD__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_No_of_Active_Contracts__c.ASI_CRM_TH_No_of_Active_Contracts</value>
        </filters>
        <label>TH CRM No. of Active Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT{YY}{MM}{000}</displayFormat>
        <label>No. of Active Contract Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>No. of Active Contracts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_No_of_Active_Contracts</fullName>
        <active>true</active>
        <label>TH CRM No. of Active Contracts</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>